# pIDEstyx

./: .gitignore  LICENSE  Makefile
ide-core/apps/editor/: Cargo.toml
ide-core/apps/editor/src/: lib.rs  syntax.rs  text_buffer.rs
ide-core/ui/: index.html  package-lock.json  package.json
ide-core/ui/src/: App.css  App.tsx
ide-core/ui/src-tauri/: Cargo.toml  buffer.txt  tauri.conf.json
ide-core/ui/src-tauri/lang-tests/: buffer.cs  buffer.ts  buffer.tsx
ide-core/ui/src-tauri/src/: main.rs
