[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1.6"
anyhow = "1.0"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c-sharp = "0.20"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
